# FabricLA-Connector

./: .env.example  .flake8  .gitattributes  .gitignore  .pre-commit-config.yaml  .secrets.baseline  CLAUDE.md  MANIFEST.in  PACKAGING_COMPLETE.md  README.md  cleanup_environments.bat  download_fabric_requirements.py  fabric-api-endpoints-summary.md  fabric-monitoring-gap-analysis.md  fix_tests.py  pyproject.toml  requirements.in  requirements.txt  run_tests.py  setup.py  setup_fabric_environment.bat  setup_fabric_environment.py  test_local_build.py
.claude/: settings.local.json
.github/: README.md  copilot-instructions.md  dependabot.yml  secrets.env.template
.github/scripts/: test-deployment-setup.py  upload-to-fabric.py
.github/workflows/: build-and-upload-to-fabric.yml  ci.yml  fabric-deployment.yml  publish-wheel-to-fabric.yml
docs/: EnvironmentSetup.md
fabric-governance/: .env.example  QUICKSTART.md  README.md  deploy-infrastructure.bat  requirements.txt
fabric-governance/bicep/: tenant-monitoring.bicep
fabric-governance/common/: README.md  dcr-template.json  tables-template.json
fabric-governance/config/: approved-previews.json.example
fabric-governance/notebooks/: fabric_tenant_settings_monitor.ipynb
fabric-governance/powershell/: Compare-TenantSettings.ps1  Disable-PreviewFeatures.ps1  Get-FabricTenantSettings.ps1
fabric-governance/scripts/: automated_governance_pipeline.py
fabric-governance/terraform/: deploy.bat  deploy.sh  main.tf  terraform.tfvars.example
infra/bicep/: MODULAR_DEPLOYMENT_GUIDE.md  README.md  main.bicep  params.example.json  tables-module.bicep
infra/common/: advanced-tables-template.json  dcr-admin-monitoring-template.json  dcr-capacity-monitoring-template.json  dcr-pipeline-monitoring-template.json  dcr-spark-monitoring-template.json  dcr-template.json  operational-tables-template.json  tables-template.json
infra/terraform/: MODULAR_DEPLOYMENT_GUIDE.md  STREAM_REORGANIZATION.md  main.tf  terraform.tfvars
notebooks/: .env.example  ama_gateway_deployment_guide.ipynb  fabric_capacity_utilization_monitoring.ipynb  fabric_dataset_refresh_monitoring.ipynb  fabric_pipeline_dataflow_collector.ipynb  fabric_spark_monitoring.ipynb  fabric_user_activity_monitoring.ipynb  framework_quickstart_example.ipynb  intelligent_monitoring_example.ipynb  validate_environment.ipynb  workspace_config_monitoring.ipynb
scripts/: README.md  build_pypi.bat  build_pypi.ps1  compile-deps.bat  compile-deps.sh  release.bat  release.ps1
scripts/SemanticModel/: export_fabric_semantic_model_definition.py  import_fabric_semantic_model.py  migrate_semantic_model.py
setup/: README.md  download_fabric_requirements.py  setup_fabric_environment.py
src/fabricla_connector/: __init__.py  api.py  collectors.py  config.py  ingestion.py  intelligent_workflows.py  mappers.py  monitoring_detection.py  telemetry.py  utils.py  workflows.py
src/fabricla_connector/api/: __init__.py  auth.py  exceptions.py  fabric_client.py
src/fabricla_connector/collectors/: __init__.py  base.py  capacity.py  data_lineage.py  dataset.py  git_integration.py  mirroring.py  ml_ai.py  notebook.py  onelake.py  permissions.py  pipeline.py  realtime_intelligence.py  semantic_model.py  spark.py  spark_job.py  user_activity.py
src/fabricla_connector/ingestion/: __init__.py  batch.py  client.py  retry.py
src/fabricla_connector/mappers/: __init__.py  base.py  capacity.py  collectors_new.py  dataset.py  pipeline.py  spark.py  user_activity.py
tests/: __init__.py  conftest.py  run_tests.py  test_collectors.py  test_config_validation.py  test_e2e_workflow.py  test_framework.py  test_integration.py  test_mappers.py  test_utils.py  test_workflows.py  test_workspace_config.py
tools/: README.md  fix_duplicate_words.py  jfrog_to_fabric_sync.py  remove_emojis_professional.py  test_fabric_auth.py  upload_wheel_to_blob.py  upload_wheel_to_fabric.py
